# lo21-project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  include.cmake  report_fr.tex
ext/: CMakeLists.txt  README.md  grammar.ebnf  parse.c  parse.h
ext/src/: cmd.c  cmd.h  main.c  parse.c  parse.h
ext/test/: test-1.kb  test-2.kb  test-3.kb  test-4.kb  test-error.kb
src/: colors.h  inference.c  inference.h  knowledge.c  knowledge.h  main.c  rule.c  rule.h  test.c
